--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-sharp": "^3.4.0",
     "gatsby-plugin-styled-components": "^4.4.0",
+    "gatsby-source-contentful": "^5.4.0",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-sharp": "^3.4.0",
     "normalize.css": "^8.0.1",
